[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
serde_yaml = "0.9.32"
similar = "2.4.0"
tokio = { version = "1.36.0", features = ["full"] }
